Agregando bloque de noticias

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -10,7 +10,7 @@ img{
 }
 .noticiasGrid{
     margin: 10px;
-    border: 1px solid lightsalmon;
+    border: 1px solid darkblue;
     padding: 10px;
 }
 .container-fluid{
